Patch code in iframe.html

--- a/presentation-api/controlling-ua/support/iframe.html
+++ b/presentation-api/controlling-ua/support/iframe.html
@@ -9,15 +9,15 @@
       try {
         // Presentation URLs are relative to the "controlling-ua" folder,
         // update relative URLs for this folder
-        var urls = presentationUrls.map(function (url) {
-          if (/:\/\//.test(url)) {
-            return url;
-          }
-          else {
-            return '../' + url;
-          }
-        });
-        var request = new PresentationRequest(urls);
+        <!-- var urls = presentationUrls.map(function (url) { -->
+        <!--   if (/:\/\//.test(url)) { -->
+        <!--     return url; -->
+        <!--   } -->
+        <!--   else { -->
+        <!--     return '../' + url; -->
+        <!--   } -->
+        <!-- }); -->
+        var request = new PresentationRequest(presentationUrls);
         if (ev.data === 'start') {
           request.start()
             .then(function () {
